[package]
name = "rand-dir"
version = "0.1.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.8.0"
petname = "1.1.0"
rand = "0.8.4"
tempdir = "0.3.7"
# TODO: move this behind a feature flag
arbitrary = "1.0.1"
